--- a/M5-Challenge-Zheng-Zhong/gamestore-catalog/src/main/resources/application.properties
+++ b/M5-Challenge-Zheng-Zhong/gamestore-catalog/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=7474
 management.endpoints.web.exposure.include=*
-spring.application.name=game-store-catalog
+spring.application.name=gamestore-catalog
 
 
 spring.datasource.url: jdbc:mysql://localhost:3306/game_store_catalog?useSSL=false&serverTimezone=US/Eastern&allowPublicKeyRetrieval=true
